--- a/.github/workflows/build-XY-C1.yml
+++ b/.github/workflows/build-XY-C1.yml
@@ -18,10 +18,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-
+    
     steps:
     - name: Checkout
       uses: actions/checkout@master
+    - name: Set up Go
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.15.3
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
