--- a/.github/workflows/build-XY-C1.yml
+++ b/.github/workflows/build-XY-C1.yml
@@ -33,7 +33,7 @@ jobs:
               libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget libc-dev-bin
     - name: Clone source code
       run: |
-        git clone --depth=1 https://github.com/chongshengB/rt-n56u.git /opt/rt-n56u
+        git clone --depth=1 https://github.com/snakeliwei/rt-n56u-1.git /opt/rt-n56u
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
